--- a/.github/workflows/ci_pc.yml
+++ b/.github/workflows/ci_pc.yml
@@ -91,7 +91,7 @@ jobs:
           echo ${{ runner.os }}
           source scripts/tool-premake5+x.sh ${{ github.workspace }}
 
-          sudo make install_deps
+          make install_deps
           make ninja ARGV=CI=1
           make run ARGV=5
           make test
@@ -107,7 +107,7 @@ jobs:
           brew install bash
           echo $SHELL
           
-          sudo make install_deps
+          make install_deps
           #make xcode ARGV=CI=1
           #make run_macos ARGV=5
 
