--- a/.github/workflows/ci_pc.yml
+++ b/.github/workflows/ci_pc.yml
@@ -122,11 +122,11 @@ jobs:
 
       - name: Create artifact
         run: |
-          mkdir -p temp/artifact/${{ runner.os }}
-          cp -r bin/* temp/artifact/${{ runner.os }}
+          ARTIFACT_DIR=temp/artifact/pc/${{ runner.os }}
+          mkdir -p ${ARTIFACT_DIR} && cp -rv bin/* ${ARTIFACT_DIR}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Release-Artifact-${{ runner.os }}
+          name: Release-Artifact-pc-${{ runner.os }}
           path: ${{ github.workspace }}/temp
