--- a/.github/workflows/ci_pc.yml
+++ b/.github/workflows/ci_pc.yml
@@ -102,7 +102,7 @@ jobs:
           echo ${{ runner.os }}
           source scripts/tool-premake5+x.sh ${{ github.workspace }}
 
-          make install_deps
+          make install_deps ARGV=CI=1
           make ninja ARGV=CI=1
           make run ARGV=5
           make test
@@ -118,7 +118,7 @@ jobs:
           brew install bash
           echo $SHELL
           
-          make install_deps
+          make install_deps ARGV=CI=1
           #make xcode ARGV=CI=1
           #make run_macos ARGV=5
 
